--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ del {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 0;
+    padding: 70px 0;
 }
 
 .home_img img{
@@ -125,11 +125,36 @@ del {
     font-size: 16px;
     line-height: 20px;
     max-width: 345px;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
     color: #fff;
     opacity: 0;
     animation: slideRight 1s ease forwards;
     animation-delay: .8s;
+}
+
+.home_share-item {
+    display: inline-block;
+    text-align: center;
+    padding: 10px 12px 6px 12px;
+    border: 1px solid #fff;
+    border-radius: 50px;
+    color: #fff;
+    font-size: 29px;
+    margin-bottom: 20px;
+    background: #FF6E31;
+    opacity: 0;
+    margin-right: 10px;
+    transition: .3s ease;
+    animation: slideRight 1s ease forwards;
+    animation-delay: calc(1s + .2s * var(--i));
+}
+
+.home_share-item:hover {
+    background: #fff;
+    color: #FF6E31;
+    /* box-shadow: 0px 0px 27px 0px rgba(34, 60, 80, 0.2); */
+    box-shadow: 0px 0px 20px 0px #fff;
+    transition: .3s ease;
 }
 
 .home_link {
@@ -145,16 +170,22 @@ del {
     animation-delay: 1.1s
 } 
 
+
 .home_link:hover {
     background: #fff;
     transition: .3s ease;
     color: #FF6E31;
+    box-shadow: 0px 0px 20px 0px #fff;
 }
 
 /* ------------ about ---------------------- */
 
 .about {
     padding: 160px 0;
+}
+
+.about_content {
+    max-width: 45%;
 }
 
 .about_title {
@@ -179,6 +210,117 @@ del {
     margin-bottom: 30px;
 }
 
+.about-inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* ===== about swiper */
+
+.about_swiper {
+    padding: 40px;
+    max-width: 45%;
+
+}
+
+.about_swiper-slide img{
+    display: block;
+    max-width: 330px;
+    margin: 0 auto;
+}
+
+.about_swiper-pagination {
+    margin-bottom: 1px;
+    color: black;
+}
+
+.about_swiper-pagination-bullet {
+    height: 10px;
+    width: 10px;
+}
+
+.about_swiper .swiper-pagination-bullet-active {
+    --swiper-theme-color: black;
+}
+
+.about_swiper-scrollbar {
+    display: none;
+}
+
+.about_swiper-button-prev {
+    color: #000;
+}
+
+.about_swiper-button-next {
+    color: #000;
+}
+
+/* ========================= rewiews ======================== */
+
+.reviews {
+    background: #AD8E70;
+    color: #fff;
+}
+
+.reviews-inner {
+    padding: 170px 0;
+}
+
+.reviews_title {
+    font-size: 36px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 70px;
+    color: #fff;
+}
+
+.reviews_swiper {
+    height: 500px;
+}
+
+.reviews_swiper-slide {
+    width: 100%;
+    padding: 0 140px;
+}
+
+.reviews_slide-inner {
+    border: 1px solid #fff;
+    min-width: 100%;
+    min-height: 100%;
+    padding: 30px 60px;
+    border-radius: 15px;
+}
+
+.reviews_swiper-button-prev {
+    color: #fff;
+    border: 2px solid #fff;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.reviews_swiper-button-next {
+    color: #fff;
+    border: 2px solid #fff;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+
+.reviews_swiper .swiper-pagination-bullet-active {
+    --swiper-theme-color: #fff;
+}
+
+.reviews_swiper-slide-logo {
+    margin: 0 auto;
+    background-image: url('../images/slider1.jpg');
+    background-position: center;
+    background-size: 70px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
 
 /* -------- ANIMATION ------------- */
 
